@@ -1,4 +1,5 @@
 1.0.1
+- If trust db is empty when fapolicyd-cli dumps it, say its empty
 
 1.0
 - Add file size, IMA, and sha256 based integrity checking
